# bb84_simulation

./: #Simulator.h#  .#Simulator.cxx  .#Simulator.h  .gitignore  Analyzer.cpp  Analyzer.cxx  Analyzer.h  BB84_simulation.root  Buddy.cxx  Buddy.h  CMakeLists.txt  Canale.C~  Channel.cxx  Channel.h  ConfigSimulation.cxx  ConfigSimulation.h  LICENSE  Phone.cxx  Phone.h  ProofMacro.cxx  QBit.cxx  QBit.h  Qbit.cxx  Qbit.h  Simulator.cxx  Simulator.h  StopWatch.cxx  StopWatch.h  TBuddy.cxx  TBuddy.h  TChannel.cxx  TChannel.h  TGate.cxx  TGate.h  TPhone.cxx  TPhone.cxx~  TPhone.h  TQbit.cxx  TQbit.h  TReceiver.cxx  (+12 more)
relazione/: report.tex
